--- a/package.json
+++ b/package.json
@@ -21,12 +21,12 @@
   "devDependencies": {
     "@babel/core": "^7.8.4",
     "@babel/preset-env": "^7.8.4",
+    "babel-eslint": "^10.1.0",
     "babel-loader": "^8.0.6",
     "babel-polyfill": "^6.26.0",
     "babylonjs": "^4.1.0",
-    "eslint": "^6.1.0",
+    "eslint": "^8.3.0",
     "eslint-config-airbnb": "^18.0.1",
-    "eslint-config-node": "^4.0.0",
     "eslint-config-prettier": "^6.10.0",
     "eslint-import-resolver-webpack": "^0.12.1",
     "eslint-plugin-import": "^2.18.2",
@@ -38,7 +38,7 @@
     "eslint-plugin-react-hooks": "^1.7.0",
     "file-loader": "^5.1.0",
     "jsdoc": "^3.6.7",
-    "karma": "^6.0.0",
+    "karma": "^6.3.9",
     "karma-chrome-launcher": "^3.1.0",
     "karma-firefox-launcher": "^1.3.0",
     "karma-jasmine": "^3.1.1",
