--- a/package.json
+++ b/package.json
@@ -68,5 +68,8 @@
     "last 2 FirefoxAndroid versions",
     "last 2 iOS versions"
   ],
-  "version": "2.0.6"
+  "version": "2.0.6",
+  "overrides": {
+    "xml2js": "^0.5.0"
+  }
 }
